force-app/main/default/objects/Guest_CheckIn__c/Guest_CheckIn__c.object-meta.xml
<CustomObject>
    <label>Guest Check-In</label>
    <nameField>
        <label>Guest Check-In Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guest Check-Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>