force-app/main/default/objects/Guest_CheckIn__c/fields/Auto_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Completed_Date__c</fullName>
    <label>Auto Completed Date</label>
    <type>Date</type>
</CustomField>