force-app/main/default/objects/Guest_CheckIn__c/fields/Early_Checkout_Time__c.field-meta.xml
<CustomField>
    <fullName>Early_Checkout_Time__c</fullName>
    <label>Early Checkout Time</label>
    <type>DateTime</type>
</CustomField>