force-app/main/default/objects/Guest_CheckIn__c/fields/Extension_Count__c.field-meta.xml
<CustomField>
    <fullName>Extension_Count__c</fullName>
    <label>Extension Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>