force-app/main/default/objects/Guest_CheckIn__c/fields/GRSR_Number__c.field-meta.xml
<CustomField>
    <fullName>GRSR_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Grsr Number</label>
    <type>AutoNumber</type>
</CustomField>