force-app/main/default/objects/Guest_CheckIn__c/fields/New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_End_Date__c</fullName>
    <label>New End Date</label>
    <type>Date</type>
</CustomField>