force-app/main/default/objects/Guest_CheckIn__c/fields/No_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>No_of_Guests__c</fullName>
    <label>No Of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>