force-app/main/default/objects/Guest_CheckIn__c/fields/Special_Need__c.field-meta.xml
<CustomField>
    <fullName>Special_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Need</label>
    <type>Checkbox</type>
</CustomField>