force-app/main/default/objects/Guest_CheckIn__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>